<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a71eb1"
    tools:context=".perfiles">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/luis_photo" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:text="@string/My_name"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:layout_below="@id/imageView"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:text="@string/My_Descriptions"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_below="@id/tv_name"/>

    <View
        android:id="@+id/upperDivision"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_desc" />

    <LinearLayout
        android:weightSum="3"
        android:id="@+id/container"
        android:layout_below="@+id/upperDivision"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewRepos"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:text="@string/profile_label_repos"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewProjects"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:text="@string/projects"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewStars"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/profile_label_stars"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/downDivision"
        android:layout_marginTop="30dp"
        android:layout_below="@id/container"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:background="#0ea5d2"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/downDivision"
        android:text="Button" />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>